--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.2"
+    "dotenv-flow": "^4.1.0",
+    "express": "^4.21.2",
+    "mysql2": "^3.12.0"
   }
 }
