--- a/backend/package.json
+++ b/backend/package.json
@@ -5,16 +5,21 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app.js",
-    "serve": "nodemon server.js"
+    "serve": "nodemon server.js",
+    "mistral": "nodemon mistral.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@mistralai/mistralai": "^1.5.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv-flow": "^4.1.0",
     "express": "^4.21.2",
+    "express-sse": "^0.5.3",
     "mysql2": "^3.12.0"
-  }
+  },
+  "type": "module"
 }
