--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^2.2.0",
+    "@mui/material": "^6.4.4",
     "@tailwindcss/vite": "^4.0.6",
     "axios": "^1.7.9",
     "lucide-react": "^0.475.0",
