--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "react-search-box": "^3.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
